--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>CIUDAD: CORDOBA CAPITAL</p>
             <p>ESTUDIANTE DE INGENIERIA EN COMPUTACION</p>
             <h3>SOBRE MI:</h3>
-            <h4>Con el paso del tiempo he aprendido a manejar HTML, CSS y JavaScript de manera autodidacta. y lo aprendido lo apliquo en proyectitos</h4>
+            <h4>Con el paso del tiempo he aprendido a manejar HTML, CSS y JavaScript de manera autodidacta. y lo aprendido lo aplico en proyectitos</h4>
             <divA class="tecnologias">
                 <img src="image/social_html5_html_71.png" alt="HTML5">
                 <img src="image/css3-02_icon-icons.com_50917.png" alt="CSS3">
@@ -62,9 +62,7 @@
                 GITHUB
             </a>
         </center>
-
-    <div class="fin">
-        <h1>¡GRACIAS POR VISITAR MI PORTAFOLIO WEB!</h1>
+        
     </div>
     <div class="footer">
         <h2>¡SI QUIERES SABER ALGO SOBRE MI, NO DUDES EN CONTACTARME!</h2>
