--- a/index.html
+++ b/index.html
@@ -53,21 +53,16 @@
             </div>
         </div>
     </div>
-
     <div class="proyectos">
-        <h1>TE DEJO MI PERFIL DE GITHUB PARA QUE PUEDAS VER MIS PROYECTOS</h1>
-        <center>
-            <a href="https://github.com/AgustinGibaut-01" target="_blank">
-                <img src="image/icons8-github-50.png" alt="GitHub icon" height="598" width="398">
-                GITHUB
+        <h3>TE DEJO MI PERFIL DE GITHUB</h3>
+        <div class="github-link-container">
+            <a href="https://github.com/AgustinGibaut-01" target="_blank" class="github-link">
+                <img src="image/icons8-github-50.png" alt="GitHub icon">
+                <span>GITHUB</span>
             </a>
-        </center>
-        
+        </div>
     </div>
-    <div class="footer">
-        <h2>¡SI QUIERES SABER ALGO SOBRE MI, NO DUDES EN CONTACTARME!</h2>
     </div>
 
-    <!-- SI LEISTE ESTE COMENTARIO, ERES UN CRACK. QUE ESPERAS PARA LLAMARME? -->
 </body>
 </html>
