--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="proyectos">
         <h3>TE DEJO MI PERFIL DE GITHUB</h3>
         <div class="github-link-container">
-            <a href="https://github.com/AgustinGibaut-01" target="_blank" class="github-link">
+            <a href="https://github.com/Agustin-Gibaut" target="_blank" class="github-link">
                 <img src="image/icons8-github-50.png" alt="GitHub icon">
                 <span>GITHUB</span>
             </a>
