--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=Pacifico&family=Playwrite+IT+Moderna:wght@100..400&display=swap" rel="stylesheet">    
 </head>
 <body>
     <div class="header">
@@ -41,17 +41,18 @@
     <div class="contenedor">
         <div class="texto">
             <h1>¡Hola! Bienvenido!</h1>
-            <P>NOMBRE: AGUSTIN GIBAUT</P>
             <p>CIUDAD: CORDOBA CAPITAL</p>
-            <p>ESTUDIANTE DE INGENIERIA EN COMPUTACION</p>
             <h3>SOBRE MI:</h3>
-            <h4>Con el paso del tiempo he aprendido a manejar HTML, CSS y JavaScript de manera autodidacta. y lo aprendido lo aplico en proyectitos</h4>
+            <h4>En mis tiempos libres me gusta crear páginas webs usando html5, css y Javascript.  Realizo pequeños proyectos  para poder perfeccionar mis habilidades, lo que me permite aprender constantemente y también poder experimentar con nuevas ideas.</h4>
             <divA class="tecnologias">
                 <img src="image/social_html5_html_71.png" alt="HTML5">
                 <img src="image/css3-02_icon-icons.com_50917.png" alt="CSS3">
                 <img src="image/javascript_logo_icon_145155.png" alt="JavaScript">
             </div>
+    
         </div>
+
+       
     </div>
     <div class="proyectos">
         <h3>TE DEJO MI PERFIL DE GITHUB</h3>
